<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:textSize="40sp"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setMode"
            android:textSize="25sp"
            android:textColor="@color/brightBlue"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/setEasy"
                android:text="@string/easyMode"
                android:textSize="15sp"
                android:textColor="@color/brightBlue"
                android:layout_marginRight="20dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/setMed"
                android:text="@string/mediumMode"
                android:textSize="15sp"
                android:textColor="@color/brightBlue"
                android:layout_marginRight="20dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/setHard"
                android:text="@string/hardMode"
                android:textSize="15sp"
                android:textColor="@color/brightBlue"
                android:layout_marginRight="20dp"/>

        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resetStat"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/resetStat"
            android:textSize="25sp"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

</LinearLayout>
